@@ -1,4 +1,9 @@
 
-__version__ = "0.9.0"
+from pkg_resources import get_distribution, DistributionNotFound
+try:
+    __version__ = get_distribution(__name__).version
+except DistributionNotFound:
+    # package is not installed
+    __version__ = "0.0.0.dev0-unknown"
 
 MAILADM_SYSCONFIG_PATH = "/etc/mailadm/mailadm.config"
